syntax = "proto3";
package corepb;
import "github.com/dappley/go-dappley/core/transaction/pb/transaction.proto";


message TransactionNode{
    map<string, transactionpb.Transaction> children = 1;
    transactionpb.Transaction value = 2;
    int64   size = 3;
}

message TransactionPool{
    map<string, TransactionNode> txs = 1;
    repeated string tipOrder = 2;
    uint32 currSize = 3;
}


